# markdoc-studio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.mjs
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
