[package]
name = "markdoc-studio"
version = "0.1.0"
description = "Offline Markdown to DOCX/PDF studio for Windows."
authors = ["MarkDoc Studio"]
edition = "2021"

[lib]
name = "markdoc_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
